messing with messaging, and experimenting with new design concepts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <main>
         <section class="content introduction dark">
             <div class="container">
-                <h1>Kyle Clay Richards</h1>
+                <!-- <h1>I'm Kyle Clay Richards, a Graphic Designer & Front-end Developer who is passionate about branding and translating creative vision to thoughtful user experiences.</h1> -->
+                 <h1>Art<br/>Design<br/>Code<br/>& Sports</h1>
                 <p class="secondary-heading lg">Graphic Designer & Front-end Developer</p>
                 <img src="images/KyleClayRichards_Headshot2025.jpg" />
             </div>
