--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
         <section class="content statement text-center">
             <div class="container sm">
-                <p class="intro lg">I craft logos and translate brand vision into cohesive, impactful experiences for print and web-based applications.</p>
+                <p class="intro lg">Creative empath specializing in brand identity development, strategy, and execution in print and web-based applications.</p>
             </div>
         </section>
         <section class="content featured-projects">
