--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -15,10 +15,19 @@
 </head>
 <body>
     <header class="main">
-        <div class="logo">
-            
+        <div class="container lg">
+            <div class="logo">
+                <img src="images/KyleClayRichards_Logo_YellowGold.svg" />
+                <h2>Kyle Clay Richards</h2>
+            </div>
+            <nav class="main">
+                <ul>
+                    <li><a href="/about">About</a></li>
+                    <li><a href="/portfolio">Portfolio</a></li>
+                    <li><a href="/contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-
     </header>
     <main>
         <div class="controls">
