added anchor navs and ids, smooth scrolling for animation

--- a/index.html
+++ b/index.html
@@ -25,32 +25,32 @@
             <nav class="main-nav">
                 <ul>
                     <li>
-                        <a href="#0">Home</a>
+                        <a href="#home">Home</a>
                     </li>
                     <li>
-                        <a href="#0">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#0">Services</a>
+                        <a href="#services">Services</a>
                     </li>
                     <li>
-                        <a href="#0">Portfolio</a>
+                        <a href="#portfolio">Portfolio</a>
                     </li>
                 </ul>
                 <div class="cta">
-                    <a href="#0" class="btn">Contact</a>
+                    <a href="#contact" class="btn">Contact</a>
                 </div>
             </nav>
         </div>
     </header>
-    <section class="banner takeover home-feature">
+    <section class="banner takeover home-feature" id="home">
         <div class="container">
             <p class="heading hero">Design</p>
             <p class="heading hero">Dev</p>
             <p class="heading hero">& beyond</p>
         </div>
     </section>
-    <section class="banner takeover about-feature">
+    <section class="banner takeover about-feature" id="about">
         <div class="container">
             <h1>Crafting logo identities and translating brand vision into cohesive, impactful customer experiences through print and web-based applications.</h1>
             <p class="link">
@@ -58,7 +58,7 @@
             </p>
         </div>
     </section>
-    <section class="pods services-feature">
+    <section class="pods services-feature" id="services">
         <div class="container">
             <div class="component-inner">
                 <div class="item">
@@ -88,7 +88,7 @@
             </div>
         </div>
     </section>
-    <section class="slider top-forward">
+    <section class="slider top-forward" id="portfolio">
         <div class="item">
             <img src="./images/projects/KyleClayRichards_FirstCallJewel_Thumbnail.jpg" />
         </div>
@@ -123,7 +123,7 @@
         </div>
     </section>
 
-    <section class="contact-form">
+    <section class="contact-form" id="contact">
         <div class="form-container">
             <h2>Send me a messsage.</h2>
             <p>If you have any questions about a potential project, my processes, or pricing, please reach out. I'd love the opportunity to chat about how I can help.</p>
