--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <section class="banner takeover about-feature" id="about">
         <div class="container">
             <h1>Crafting logo identities and translating brand vision into cohesive, impactful customer experiences through print and web-based applications.</h1>
-            <p class="link">
+            <!-- <p class="link">
                 <a class="btn" href="/about">More About Me</a>
-            </p>
+            </p> -->
         </div>
     </section>
     <section class="pods services-feature" id="services">
@@ -64,27 +64,27 @@
             <div class="component-inner">
                 <div class="item">
                     <img src="./images/graphic-design-icon.svg" />
-                    <h4>Graphic Design</h4>
+                    <h5>Graphic Design</h5>
                     <p>I develop brand identities and help them stand out by shaping visuals around your goals to create meaningful, effective communication across every touchpoint.</p>
-                    <p class="link">
+                    <!-- <p class="link">
                         <a class="btn sm" href="#0">Learn More</a>
-                    </p>
+                    </p> -->
                 </div>
                 <div class="item">
                     <img src="./images/website-development-icon.svg" />
-                    <h4>Website Development</h4>
+                    <h5>Website Development</h5>
                     <p>I create content-driven websites from a mobile-first frame of mind and user experience at the forefront of every decision.</p>
-                    <p class="link">
+                    <!-- <p class="link">
                         <a class="btn sm" href="#0">Learn More</a>
-                    </p>
+                    </p> -->
                 </div>
                 <div class="item">
                     <img src="./images/and-beyond-icon.svg" />
-                    <h4>& beyond...</h4>
+                    <h5>& beyond...</h5>
                     <p>Post-launch, I continually analyze performance across all channels, making strategic updates to foster growth and boost conversion rates.</p>
-                    <p class="link">
+                    <!-- <p class="link">
                         <a class="btn sm" href="#0">Learn More</a>
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
