adjusted home feature breakpoints and contact form row setup

--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
         cssEase: 'linear',
         pauseOnHover: false,
         pasueOnFocus: false,
+        touchMove: false,
         mobileFirst: true,
         responsive: [
             {
@@ -227,6 +228,7 @@
         cssEase: 'linear',
         pauseOnHover: false,
         pasueOnFocus: false,
+        touchMove: false,
         rtl: true,
         mobileFirst: true,
         responsive: [
