playing with some bline HTML + CSS styles for the first pass

--- a/about/index.html
+++ b/about/index.html
@@ -35,134 +35,122 @@
             <nav class="main-nav">
                 <ul>
                     <li>
-                        <a href="#home">Home</a>
+                        <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="#about">About</a>
+                        <a href="/about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="services">Services</a>
                     </li>
                     <li>
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="portfolio">Portfolio</a>
                     </li>
                 </ul>
                 <div class="cta">
-                    <a href="#contact" class="btn">Contact</a>
+                    <a href="/contact" class="btn">Contact</a>
                 </div>
             </nav>
         </div>
     </header>
-    <section class="banner takeover home-feature" id="home">
+    <section class="title-banner" >
         <div class="container">
-            <p class="heading hero">Design</p>
-            <p class="heading hero">Dev</p>
-            <p class="heading hero">& beyond</p>
+            <p class="secondary-heading">About Me</p>
+            <h1>Kyle Clay Richards</h1>>
         </div>
     </section>
-    <section class="banner takeover about-feature" id="about">
+    <section class="about-timeline">
         <div class="container">
-            <h1>Crafting logo identities and translating brand vision into cohesive, impactful customer experiences through print and web-based applications.</h1>
-            <!-- <p class="link">
-                <a class="btn" href="/about">More About Me</a>
-            </p> -->
-        </div>
-    </section>
-    <section class="pods services-feature" id="services">
-        <div class="container">
-            <div class="component-inner">
-                <div class="item">
-                    <img src="./images/graphic-design-icon.svg" />
-                    <h5>Graphic Design</h5>
-                    <p>I develop brand identities and help them stand out by shaping visuals around your goals to create meaningful, effective communication across every touchpoint.</p>
-                    <!-- <p class="link">
-                        <a class="btn sm" href="#0">Learn More</a>
-                    </p> -->
+            <div class="timeline-wrapper">
+                <div clas="item">
+                    <div class="year">90</div>
+                    <div class="milestone">Born & raised in SE Idaho</div>
                 </div>
-                <div class="item">
-                    <img src="./images/website-development-icon.svg" />
-                    <h5>Website Development</h5>
-                    <p>I create content-driven websites from a mobile-first frame of mind and user experience at the forefront of every decision.</p>
-                    <!-- <p class="link">
-                        <a class="btn sm" href="#0">Learn More</a>
-                    </p> -->
+                <div clas="item">
+                    <div class="year">08</div>
+                    <div class="milestone">1<sup>st</sup> Gen College Student</div>
                 </div>
-                <div class="item">
-                    <img src="./images/and-beyond-icon.svg" />
-                    <h5>& beyond...</h5>
-                    <p>Post-launch, I continually analyze performance across all channels, making strategic updates to foster growth and boost conversion rates.</p>
-                    <!-- <p class="link">
-                        <a class="btn sm" href="#0">Learn More</a>
-                    </p> -->
+                <div clas="item">
+                    <div class="year">14</div>
+                    <div class="milestone">BFA Graphic Design</div>
+                </div>
+                <div clas="item">
+                    <div class="year"></div>
+                    <div class="milestone">Designer & MWS.dev</div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Website Design</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Logo Design</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Print Design</div>
+                    </div>
+                </div>
+                <div clas="item">
+                    <div class="year">16</div>
+                    <div class="milestone">Promoted to Lead Designer</div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Front-end Development</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Project Management</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Sales & Support</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Mentoring</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">SOP Documentation</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Launched 300+ Websites</div>
+                    </div>
+                </div>
+                <div clas="item">
+                    <div class="year">23</div>
+                    <div class="milestone">Got Married</div>
+                </div>
+                <div clas="item">
+                    <div class="year">24</div>
+                    <div class="milestone">Became a Dad</div>
+                </div>
+                <div clas="item">
+                    <div class="year">25</div>
+                    <div class="milestone">Became Board Member @ ARTI</div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Left MWS.dev</div>
+                    </div>
+                    <div clas="item">
+                        <div class="year"></div>
+                        <div class="milestone">Joined PersnicketySocials.com</div>
+                        <div clas="item">
+                            <div class="year"></div>
+                            <div class="milestone">Creative & Brand Manager</div>
+                        </div>
+                        <div clas="item">
+                            <div class="year"></div>
+                            <div class="milestone">Website Specialist</div>
+                        </div>
+                    </div>
+                </div>
+                <div clas="item">
+                    <div class="year">26</div>
+                    <div class="milestone">Dad x2</div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section class="slider top-forward" id="portfolio">
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_FirstCallJewel_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_ITD-Coin-Challenge_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_JoryBehavioralHealth_Website_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_ARTI_Posters2023.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_BeBall_RewardsLayout_Thumbnail.jpg" />
-        </div>
-    </section>
-    <section class="slider bottom-reverse" dir="rtl">
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_RockwellHomes_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_JoryBehavioralHealth_Logo_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_BeBall_RewardsCloseup_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_SpaNoel_Logo_Thumbnail.jpg" />
-        </div>
-        <div class="item">
-            <img src="./images/projects/KyleClayRichards_MagicValleyOrtho_Thumbnail.jpg" />
-        </div>
-    </section>
-
-    <section class="contact-form" id="contact">
-        <div class="form-container">
-            <h2>Send me a messsage.</h2>
-            <p>If you have any questions about a potential project, my processes, or pricing, please reach out. I'd love the opportunity to chat about how I can help.</p>
-            <form action="https://submit-form.com/okL0fW3Bj" method="POST">
-                <div class="form-item">
-                    <label for="firstName">First Name</label>
-                    <input type="text" id="firstName" name="First Name" placeholder="" required="">
-                </div>
-                <div class="form-item">
-                    <label for="lastName">Last Name</label>
-                    <input type="lastName" id="lastName" name="Last Name" placeholder="" required="">
-                </div>
-                <div class="form-item">
-                    <label for="emailAddress">Email Address</label>
-                    <input type="email" id="emailAddress" name="Email Address" placeholder="" required="">
-                </div>
-                <div class="form-item">
-                    <label for="phoneNumber">Phone Number</label>
-                    <input type="text" id="phoneNumber" name="Phone Number" placeholder="">
-                </div>
-                <div class="form-item">
-                    <label for="message">Message</label>
-                    <textarea id="message" name="Message" placeholder="" required=""></textarea>
-                </div>
-                <div class="form-item">
-                    <div class="g-recaptcha" data-sitekey="6LdAiRssAAAAAFFN10M6q_ag412msetx7w85cqhG"></div>
-                    <button class="btn" type="submit">Send Message</button>
-                </div>
-            </form>
         </div>
     </section>
 
@@ -193,69 +181,6 @@
 </main>
 
 <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-<script>
-    $('.top-forward').slick({
-        slidesToShow: 2,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 0,
-        speed: 8000,
-        dots: false,
-        arrows: false,
-        infinite: true,
-        cssEase: 'linear',
-        pauseOnHover: false,
-        pasueOnFocus: false,
-        touchMove: false,
-        mobileFirst: true,
-        responsive: [
-            {
-                breakpoint: 992,
-                settings: {
-                    slidesToShow: 3
-                }
-            },
-            {
-                breakpoint: 1350,
-                settings: {
-                    slidesToShow: 4
-                }
-            }
-        ]
-    });
-
-    $('.bottom-reverse').slick({
-        slidesToShow: 2,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 0,
-        speed: 8000,
-        dots: false,
-        arrows: false,
-        infinite: true,
-        cssEase: 'linear',
-        pauseOnHover: false,
-        pasueOnFocus: false,
-        touchMove: false,
-        rtl: true,
-        mobileFirst: true,
-        responsive: [
-            {
-                breakpoint: 992,
-                settings: {
-                    slidesToShow: 3
-                }
-            },
-            {
-                breakpoint: 1350,
-                settings: {
-                    slidesToShow: 4
-                }
-            }
-        ]
-    });
-</script>
 
 </body>
 </html>
