fixing more global file references related to the last hasty commit

--- a/about/index.html
+++ b/about/index.html
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="logo">
                 <a href="/">
-                    <img src="./images/KyleClayRichards_Logo_White.svg" />
+                    <img src="/images/KyleClayRichards_Logo_White.svg" />
                 </a>
             </div>
             <nav class="main-nav">
@@ -156,7 +156,7 @@
 
     <footer id="site-footer">
         <div class="footer-logo">
-            <img src="./images/KyleClayRichards_Logo_White.svg" />
+            <img src="/images/KyleClayRichards_Logo_White.svg" />
         </div>
         <div class="socials">
             <ul>
