--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kyle Clay Richards > Design, Dev, & Beyond</title>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="./css/site.css">
-    <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/site.css">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
         <div class="container">
             <div class="logo">
                 <a href="/">
-                    <img src="./images/KyleClayRichards_Logo_White.svg" />
+                    <img src="/images/KyleClayRichards_Logo_White.svg" />
                 </a>
             </div>
             <nav class="main-nav">
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="component-inner">
                 <div class="item">
-                    <img src="./images/graphic-design-icon.svg" />
+                    <img src="/images/graphic-design-icon.svg" />
                     <h5>Graphic Design</h5>
                     <p>I develop brand identities and help them stand out by shaping visuals around your goals to create meaningful, effective communication across every touchpoint.</p>
                     <!-- <p class="link">
@@ -80,7 +80,7 @@
                     </p> -->
                 </div>
                 <div class="item">
-                    <img src="./images/website-development-icon.svg" />
+                    <img src="/images/website-development-icon.svg" />
                     <h5>Website Development</h5>
                     <p>I create content-driven websites from a mobile-first frame of mind and user experience at the forefront of every decision.</p>
                     <!-- <p class="link">
@@ -88,7 +88,7 @@
                     </p> -->
                 </div>
                 <div class="item">
-                    <img src="./images/and-beyond-icon.svg" />
+                    <img src="/images/and-beyond-icon.svg" />
                     <h5>& beyond...</h5>
                     <p>Post-launch, I continually analyze performance across all channels, making strategic updates to foster growth and boost conversion rates.</p>
                     <!-- <p class="link">
@@ -100,36 +100,36 @@
     </section>
     <section class="slider top-forward" id="portfolio">
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_FirstCallJewel_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_FirstCallJewel_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_ITD-Coin-Challenge_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_ITD-Coin-Challenge_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_JoryBehavioralHealth_Website_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_JoryBehavioralHealth_Website_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_ARTI_Posters2023.jpg" />
+            <img src="/images/projects/KyleClayRichards_ARTI_Posters2023.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_BeBall_RewardsLayout_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_BeBall_RewardsLayout_Thumbnail.jpg" />
         </div>
     </section>
     <section class="slider bottom-reverse" dir="rtl">
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_RockwellHomes_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_RockwellHomes_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_JoryBehavioralHealth_Logo_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_JoryBehavioralHealth_Logo_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_BeBall_RewardsCloseup_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_BeBall_RewardsCloseup_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_SpaNoel_Logo_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_SpaNoel_Logo_Thumbnail.jpg" />
         </div>
         <div class="item">
-            <img src="./images/projects/KyleClayRichards_MagicValleyOrtho_Thumbnail.jpg" />
+            <img src="/images/projects/KyleClayRichards_MagicValleyOrtho_Thumbnail.jpg" />
         </div>
     </section>
 
@@ -168,7 +168,7 @@
 
     <footer id="site-footer">
         <div class="footer-logo">
-            <img src="./images/KyleClayRichards_Logo_White.svg" />
+            <img src="/images/KyleClayRichards_Logo_White.svg" />
         </div>
         <div class="socials">
             <ul>
