--- a/about/index.html
+++ b/about/index.html
@@ -56,7 +56,7 @@
     <section class="title-banner" >
         <div class="container">
             <p class="secondary-heading">About Me</p>
-            <h1>Kyle Clay Richards</h1>>
+            <h1>Kyle Clay Richards</h1>
         </div>
     </section>
     <section class="about-timeline">
