--- a/about/index.html
+++ b/about/index.html
@@ -62,91 +62,91 @@
     <section class="about-timeline">
         <div class="container">
             <div class="timeline-wrapper">
-                <div clas="item">
+                <div class="item">
                     <div class="year">90</div>
                     <div class="milestone">Born & raised in SE Idaho</div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">08</div>
                     <div class="milestone">1<sup>st</sup> Gen College Student</div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">14</div>
                     <div class="milestone">BFA Graphic Design</div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year"></div>
                     <div class="milestone">Designer & MWS.dev</div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Website Design</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Logo Design</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Print Design</div>
                     </div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">16</div>
                     <div class="milestone">Promoted to Lead Designer</div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Front-end Development</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Project Management</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Sales & Support</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Mentoring</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">SOP Documentation</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Launched 300+ Websites</div>
                     </div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">23</div>
                     <div class="milestone">Got Married</div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">24</div>
                     <div class="milestone">Became a Dad</div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">25</div>
                     <div class="milestone">Became Board Member @ ARTI</div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Left MWS.dev</div>
                     </div>
-                    <div clas="item">
+                    <div class="item">
                         <div class="year"></div>
                         <div class="milestone">Joined PersnicketySocials.com</div>
-                        <div clas="item">
+                        <div class="item">
                             <div class="year"></div>
                             <div class="milestone">Creative & Brand Manager</div>
                         </div>
-                        <div clas="item">
+                        <div class="item">
                             <div class="year"></div>
                             <div class="milestone">Website Specialist</div>
                         </div>
                     </div>
                 </div>
-                <div clas="item">
+                <div class="item">
                     <div class="year">26</div>
                     <div class="milestone">Dad x2</div>
                 </div>
