--- a/about/index.html
+++ b/about/index.html
@@ -61,7 +61,7 @@
     </section>
     <section class="about-timeline">
         <div class="container">
-            <div class="timeline-wrapper">
+            <ul class="timeline-wrapper">
                 <div class="item">
                     <div class="year">90</div>
                     <div class="milestone">Born & raised in SE Idaho</div>
@@ -77,15 +77,15 @@
                 <div class="item">
                     <div class="year"></div>
                     <div class="milestone">Designer & MWS.dev</div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Website Design</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Logo Design</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Print Design</div>
                     </div>
@@ -93,27 +93,27 @@
                 <div class="item">
                     <div class="year">16</div>
                     <div class="milestone">Promoted to Lead Designer</div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Front-end Development</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Project Management</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Sales & Support</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Mentoring</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">SOP Documentation</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Launched 300+ Websites</div>
                     </div>
@@ -129,18 +129,18 @@
                 <div class="item">
                     <div class="year">25</div>
                     <div class="milestone">Became Board Member @ ARTI</div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Left MWS.dev</div>
                     </div>
-                    <div class="item">
+                    <div class="sub-item">
                         <div class="year"></div>
                         <div class="milestone">Joined PersnicketySocials.com</div>
-                        <div class="item">
+                        <div class="sub-sub-item">
                             <div class="year"></div>
                             <div class="milestone">Creative & Brand Manager</div>
                         </div>
-                        <div class="item">
+                        <div class="sub-item">
                             <div class="year"></div>
                             <div class="milestone">Website Specialist</div>
                         </div>
